[package]
name = "treeherder-dl"
description = "Download artifacts in bulk from Mozilla's TreeHerder"
version = "2.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ErichDonGubler/treeherder-dl"
rust-version = "1.70.0"
authors = ["Erich Gubler <erichdongubler@gmail.com>"]

[package.metadata.binstall]

[package.metadata.wix]
upgrade-guid = "B8700EB0-65FD-4E8D-971C-B986B3325C7A"
path-guid = "F49D9950-A4B4-41EA-BA5C-1ED2FAD16A0A"
license = false
eula = false

[dependencies]
anyhow = "1.0.98"
bytes = "1"
clap = { version = "4.4.2", features = ["derive"] }
env_logger = "0.11.5"
futures = { version = "0.3.28", default-features = false, features = ["std"] }
indicatif = { version = "0.17.6", features = ["futures"] }
joinery = "3.1.0"
lazy_format = "2.0.3"
log = "0.4.20"
regex = "1.9.4"
reqwest = { version = "0.12.9", features = ["gzip", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.43.1", features = ["full"] }
tokio-stream = { version = "0.1.14", default-features = false }

[profile.dist]
inherits = "release"
lto = "thin"
